fix note fab to keep inside visible scroll area

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/editor.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/editor.component.scss
@@ -114,6 +114,7 @@ app-text {
 .insert-note-fab {
   position: absolute;
   visibility: hidden;
+  inset-inline-end: 2px;
 }
 
 .fab-bottom-sheet {
